Fixed overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -46,7 +46,7 @@ body{
 }
 
 main{
-    min-height: calc(100vh - 4rem);
+    min-height: calc(100vh - 5rem);
     display: grid;
     place-items: center;
     .color-flipper-main{
